--- a/ISCSI/project.json
+++ b/ISCSI/project.json
@@ -1,14 +1,17 @@
 {
-  "version": "1.0.0-*",
+    "version": "1.0.0-*",
 
     "dependencies": {
         "DiskAccessLibrary": "1.0.0-*",
         "NETStandard.Library": "1.6.0"
     },
 
-  "frameworks": {
-    "netstandard1.6": {
-      "imports": "dnxcore50"
+    "frameworks": {
+        "netstandard1.6": {
+            "buildOptions": {
+                "define": [ "NETSTANDARD" ]
+            },
+            "imports": "dnxcore50"
+        }
     }
-  }
 }
