--- a/ISCSIConsole/project.json
+++ b/ISCSIConsole/project.json
@@ -1,22 +1,23 @@
 {
-  "version": "1.0.0-*",
-  "buildOptions": {
-    "emitEntryPoint": true
-  },
-
-  "dependencies": {
-    "Microsoft.NETCore.App": {
-        "type": "platform",
-        "version": "1.0.0"
+    "version": "1.0.0-*",
+    "buildOptions": {
+        "emitEntryPoint": true
     },
-    "Utilities": "1.0.0-*",
-    "DiskAccessLibrary": "1.0.0-*",
-    "ISCSI": "1.0.0-*"
-  },
 
-  "frameworks": {
-    "netcoreapp1.0": {
-      "imports": "dnxcore50"
+    "dependencies": {
+        "Microsoft.NETCore.App": {
+            "type": "platform",
+            "version": "1.0.0"
+        },
+        "Newtonsoft.Json": "9.0.1",
+        "Utilities": "1.0.0-*",
+        "DiskAccessLibrary": "1.0.0-*",
+        "ISCSI": "1.0.0-*"
+    },
+
+    "frameworks": {
+        "netcoreapp1.0": {
+            "imports": "dnxcore50"
+        }
     }
-  }
 }
