--- a/ISCSIConsole/project.json
+++ b/ISCSIConsole/project.json
@@ -12,12 +12,16 @@
         "Newtonsoft.Json": "9.0.1",
         "Utilities": "1.0.0-*",
         "DiskAccessLibrary": "1.0.0-*",
-        "ISCSI": "1.0.0-*"
+        "ISCSI": "1.0.0-*",
+        "AzureStorage": "1.0.0"
     },
 
     "frameworks": {
-        "netcoreapp1.0": {
-            "imports": "dnxcore50"
+        "netcoreapp1.1": {
+            "imports": [
+                "dnxcore50",
+                "portable-net451+win8"
+            ]
         }
     }
 }
