--- a/.gitignore
+++ b/.gitignore
@@ -229,4 +229,11 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Project specific
 /ISCSIConsole/Properties/launchSettings.json
+/AzureStorage/project.lock.json
+/DiskAccessLibrary/project.lock.json
+/ISCSI/project.lock.json
+/ISCSIConsole/project.lock.json
+/Utilities/project.lock.json
