--- a/AzureStorage/project.json
+++ b/AzureStorage/project.json
@@ -5,14 +5,13 @@
         "DiskAccessLibrary": "1.0.0-*",
         "NETStandard.Library": "1.6.0",
         "Newtonsoft.Json": "9.0.1",
-        "WindowsAzure.Storage": "7.2.1"
+        "WindowsAzure.Storage.NoTables": "7.2.1.4"
     },
 
     "frameworks": {
         "netstandard1.6": {
             "imports": [
-                "dnxcore50",
-                "portable-net451+win8"
+                "dnxcore50"
             ]
         }
     }
