--- a/ISCSIConsole/project.json
+++ b/ISCSIConsole/project.json
@@ -1,27 +1,37 @@
 {
     "version": "1.0.0-*",
     "buildOptions": {
-        "emitEntryPoint": true
+        "emitEntryPoint": true,
+        "optimize": true
     },
 
     "dependencies": {
-        "Microsoft.NETCore.App": {
-            "type": "platform",
-            "version": "1.0.0"
-        },
-        "Newtonsoft.Json": "9.0.1",
-        "Utilities": "1.0.0-*",
-        "DiskAccessLibrary": "1.0.0-*",
-        "ISCSI": "1.0.0-*",
-        "AzureStorage": "1.0.0"
     },
 
     "frameworks": {
-        "netcoreapp1.1": {
+        "netcoreapp1.0": {
+            "dependencies": {
+                "Microsoft.NETCore.App": {
+                    "version": "1.0.0"
+                },
+                "Newtonsoft.Json": "9.0.1",
+                "Utilities": "1.0.0-*",
+                "DiskAccessLibrary": "1.0.0-*",
+                "ISCSI": "1.0.0-*",
+                "AzureStorage": "1.0.0"
+            },
+
             "imports": [
-                "dnxcore50",
-                "portable-net451+win8"
+                "dnxcore50"
             ]
+        }
+    },
+
+    "runtimes": {
+        "win7-x64": {},
+        "osx.10.11-x64": {},
+        "ubuntu.16.04-x64": {
+            "#import": [ "ubuntu" ]
         }
     }
 }
