--- a/ISCSIConsole/project.json
+++ b/ISCSIConsole/project.json
@@ -6,19 +6,19 @@
     },
 
     "dependencies": {
+        "Newtonsoft.Json": "9.0.1",
+        "Utilities": "1.0.0-*",
+        "DiskAccessLibrary": "1.0.0-*",
+        "ISCSI": "1.0.0-*",
+        "AzureStorage": "1.0.0"
     },
 
     "frameworks": {
-        "netcoreapp1.0": {
+        "netstandard1.6": {
             "dependencies": {
-                "Microsoft.NETCore.App": {
-                    "version": "1.0.0"
-                },
-                "Newtonsoft.Json": "9.0.1",
-                "Utilities": "1.0.0-*",
-                "DiskAccessLibrary": "1.0.0-*",
-                "ISCSI": "1.0.0-*",
-                "AzureStorage": "1.0.0"
+                "NETStandard.Library": "1.6.0",
+                "Microsoft.NETCore.Runtime.CoreCLR": "1.0.2",
+                "Microsoft.NETCore.DotNetHostPolicy": "1.0.1"
             },
 
             "imports": [
